--- a/app/views/interview_questionnaires/index.html.erb
+++ b/app/views/interview_questionnaires/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing interview_questionnaires</h1>
+<h1>Total Questionnaires: <%= @interview_questionnaires.length %></h1>
 
 <table>
   <thead>
