--- a/app/views/users/edit_all.html.erb
+++ b/app/views/users/edit_all.html.erb
@@ -1,34 +1,53 @@
 <!--http://anthonylewis.com/2011/04/15/editing-multiple-records-in-rails/comment-page-1/#comment-1760-->
 <div class="row">
-  <div class="col-md-10 col-md-offset-1 top-card-padding">
+  <div class="col-lg-10 col-lg-offset-1 top-card-padding">
     <div class="card">
       <div class="posts_checkboxes">
-        <%= form_for :user, :url => update_all_path, :html => { :method => :put } do %>
-            <table class="user-all-edit-table">
-              <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-                <th>User Status</th>
-                <th>Confirmed Brother</th>
-              </tr>
-              <% @users.each do |user| %>
-                  <%= fields_for "user[]", user do |user_fields| %>
-                      <tr>
-                        <td><%= user_fields.text_field :first_name,:disabled => true %></td>
-                        <td><%= user_fields.text_field :last_name,:disabled => true %></td>
-                        <td><%= user_fields.email_field :email,:disabled => true %></td>
-                        <td><%= user_fields.collection_select :user_status, User::USERSTATUSES, :to_s, :to_s, :class => "col-md-3" %></td>
-                        <td style="padding-left: 2rem"><%= user_fields.check_box :confirmed_brother %></td>
-                      </tr>
-                  <% end %>
-              <% end %>
-            </table>
-
-            <div class="actions">
-              <%= submit_tag %>
+        <%= search_form_for @search, url: edit_all_path do |f| %>
+            <div class="field" align="center">
+              <%= f.text_field :first_name_cont, placeholder: 'Search by First Name'  %>
+              <%= f.text_field :last_name_cont, placeholder: 'Search by Last Name'  %>
+              <%= f.search_field :phone_number_cont, placeholder: 'Search by Phone Number' %>
+              <%= f.search_field :email_cont, placeholder: 'Search by Email' %>
+            </div>
+            <div align="center">
+              <div class="actions" style='display: inline;'>
+                <%= f.submit "Search For Users" %>
+              </div>
+              <div style='display: inline;'>
+                <%= link_to 'Clear Search', edit_all_path %>
+              </div>
             </div>
         <% end %>
+        <br>
+        <div class="col-lg-12">
+          <%= form_for :user, :url => update_all_path, :html => { :method => :put } do %>
+              <table class="user-all-edit-table">
+                <tr>
+                  <th>First Name</th>
+                  <th>Last Name</th>
+                  <th>Email</th>
+                  <th>User Status</th>
+                  <th>Confirmed Brother</th>
+                </tr>
+                <% @users.each do |user| %>
+                    <%= fields_for "user[]", user do |user_fields| %>
+                        <tr>
+                          <td><%= user_fields.text_field :first_name,:disabled => true %></td>
+                          <td><%= user_fields.text_field :last_name,:disabled => true %></td>
+                          <td><%= user_fields.email_field :email,:disabled => true %></td>
+                          <td><%= user_fields.collection_select :user_status, User::USERSTATUSES, :to_s, :to_s, :class => "col-md-3" %></td>
+                          <td><%= user_fields.check_box :confirmed_brother %></td>
+                        </tr>
+                    <% end %>
+                <% end %>
+              </table>
+
+              <div class="actions">
+                <%= submit_tag %>
+              </div>
+          <% end %>
+        </div>
       </div>
 
       <div class="col-md-6 center-block">
