--- a/app/views/users/edit_all.html.erb
+++ b/app/views/users/edit_all.html.erb
@@ -7,8 +7,8 @@
             <div class="field" align="center">
               <%= f.text_field :first_name_cont, placeholder: 'Search by First Name'  %>
               <%= f.text_field :last_name_cont, placeholder: 'Search by Last Name'  %>
-              <%= f.search_field :phone_number_cont, placeholder: 'Search by Phone Number' %>
               <%= f.search_field :email_cont, placeholder: 'Search by Email' %>
+              <%= f.search_field :user_status_cont, placeholder: 'Search by User Status' %>
             </div>
             <div align="center">
               <div class="actions" style='display: inline;'>
