--- a/app/views/user_mailer/_welcome.html.erb
+++ b/app/views/user_mailer/_welcome.html.erb
@@ -6,7 +6,7 @@
 <tr>
   <td align="left" valign="top" style="padding-left: 10px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #000000;">
     We wanted to let you know that you have been signed up on the Phi Kappa Tau website!
-    To login you will use this email as your login name and to create your own password you can <%= link_to 'Sign up!', new_user_password_url %>
+    To login you will use this email as your login name and you should have received a reset password email
   </td>
 </tr>
 <tr>
