--- a/app/views/interview_questionnaires/index.html.erb
+++ b/app/views/interview_questionnaires/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Total Questionnaires: <%= @interview_questionnaires.length %></h1>
 
-<table>
+<table class="interview-questionare-table">
   <thead>
     <tr>
-      <th>User</th>
+      <th>Potential</th>
       <th>Date of birth</th>
       <th>Hometown</th>
       <th>Current address</th>
