--- a/app/views/rush_interviews/show.html.erb
+++ b/app/views/rush_interviews/show.html.erb
@@ -11,12 +11,12 @@
               <%= nickname %>
             </h2>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 col-xs-12">
             <div class="img_div">
               <%= image_tag potentials_picture, :class => "contact_img" %>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 col-xs-12">
             <% if filled_out_questionnare? %>
                 <div>
                   <p style="margin: 0;">GPA:</p>
@@ -60,7 +60,7 @@
                 </div>
             <% end %>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 col-xs-12">
             <% if filled_out_questionnare? %>
                 <div>
                   <p style="margin: 0";>Home Town:</p>
