--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -207,6 +207,14 @@ a.logo:hover{
   margin-right: auto
 }
 
+.potential_img{
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
+
 .contact-back-background{
   text-align: center;
   color: #ffffff;
