--- a/app/views/rush_interviews/index.html.erb
+++ b/app/views/rush_interviews/index.html.erb
@@ -2,21 +2,21 @@
   <div class="row">
     <div class="col-lg-10 col-lg-offset-1">
       <div class="card">
-        <% @rush_interviews.each do |interview|  %>
-            <% next unless (interview.user && interview.user.interview_questionnaires.any? && interview.bid) %>
+        <% @rush_interviews.each do |interview| %>
+            <% next unless interview.user && interview.user.interview_questionnaires.last %>
             <div>
               <div style='text-align: center;'>
                 <h2>
-                  <%= (interview.user && interview.user.name) ? interview.user.name : 'No Name Available' %>
-                  <%= "(#{interview.user.interview_questionnaires.last.nickname})" unless interview.user.interview_questionnaires.last.nickname.nil? %>
+                  <%= link_to "#{interview_name(interview)}", user_path(interview.user) %>
+                  <%= nickname(interview.user.interview_questionnaires.last) %>
                 </h2>
               </div>
-              <div class="col-md-4">
-                <div class="img_div">
-                  <%= image_tag (interview.user && interview.user.profile_picture?) ? interview.user.profile_picture_url : 'no-image.png', :class => "contact_img" %>
+              <div class="col-md-4 col-xs-12">
+                <div>
+                  <%= image_tag potentials_picture(interview), :class => "potential_img" %>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 col-xs-12">
                 <% if interview.user && interview.user.interview_questionnaires %>
                     <div>
                       <p style="margin: 0;">GPA:</p>
@@ -60,7 +60,7 @@
                     </div>
                 <% end %>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 col-xs-12">
                 <% if interview.user && interview.user.interview_questionnaires %>
                     <div>
                       <p style="margin: 0";>Home Town:</p>
