--- a/app/views/users/potential_new_members.html.erb
+++ b/app/views/users/potential_new_members.html.erb
@@ -31,6 +31,7 @@
             <th><%= sort_link @search, :last_name,'Last Name' %></th>
             <th><%= sort_link @search, :phone_number, 'Phone Number' %></th>
             <th><%= sort_link @search, :email, 'Email' %></th>
+            <th></th>
           </tr>
           </thead>
           <tbody>
@@ -40,6 +41,11 @@
                 <td><%= potential.last_name? ? potential.last_name : 'N/A' %></td>
                 <td><%= potential.phone_number? ? potential.phone_number : 'N/A' %></td>
                 <td><%= potential.email? ? potential.email : 'N/A' %></td>
+                <td>
+                  <%= link_to users_admin_path(potential), method: :delete, data: { confirm: "Are You sure?" } do %>
+                    <i class="glyphicon glyphicon-remove"></i>
+                  <% end %>
+                </td>
               </tr>
           <% end %>
           </tbody>
