--- a/app/views/users/edit_all.html.erb
+++ b/app/views/users/edit_all.html.erb
@@ -11,16 +11,16 @@
               <%= f.search_field :user_status_cont, placeholder: 'Search by User Status' %>
             </div>
             <div align="center">
-              <div class="actions" style='display: inline;'>
+              <div class="actions all_users-inline">
                 <%= f.submit "Search For Users" %>
               </div>
-              <div style='display: inline;'>
+              <div class="all_users-inline">
                 <%= link_to 'Clear Search', edit_all_path %>
               </div>
             </div>
         <% end %>
         <br>
-        <div class="col-lg-12">
+        <div class="col-lg-12 col-xs-12">
           <%= form_for :user, :url => update_all_path, :html => { :method => :put } do %>
               <table class="user-all-edit-table">
                 <tr>
